Add MusicPlayer app

--- a/First App/First App/Base.lproj/Main.storyboard
+++ b/First App/First App/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="First Order" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Ub-H1-gjz">
-                                <rect key="frame" x="101.66666666666667" y="385" width="171.66666666666663" height="42"/>
+                                <rect key="frame" x="101.66666666666669" y="385" width="172" height="42"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="36"/>
                                 <color key="textColor" red="0.80548064720812185" green="0.12049250316813721" blue="0.006959178422822134" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
